dist_noinst_DATA = LICENSE.txt README.txt CHANGE-LOG.txt

noinst_HEADERS =  \
	SFMT.c			\
	SFMT.h			\
	SFMT-alti.h		\
	SFMT-params11213.h	\
	SFMT-params1279.h	\
	SFMT-params132049.h	\
	SFMT-params19937.h	\
	SFMT-params216091.h	\
	SFMT-params2281.h	\
	SFMT-params4253.h	\
	SFMT-params44497.h	\
	SFMT-params607.h	\
	SFMT-params86243.h	\
	SFMT-params.h		\
	SFMT-sse2.h
