noinst_LIBRARIES = libgb.a

libgb_a_SOURCES = \
	gbCheats.h	\
	gbCodesCB.h	\
	gbCodes.h	\
	gbGlobals.h	\
	GB.h		\
	gbMemory.h	\
	gbPrinter.h	\
	gbSGB.h		\
	gbSound.h	\
			\
	gbCheats.cpp	\
	GB.cpp		\
	gbDis.cpp	\
	gbGfx.cpp	\
	gbGlobals.cpp	\
	gbMemory.cpp	\
	gbPrinter.cpp	\
	gbSGB.cpp	\
	gbSound.cpp	


