noinst_LTLIBRARIES = libgb.la

libgb_la_SOURCES = \
	gbCheats.h	\
	gbCodesCB.h	\
	gbCodes.h	\
	gbGlobals.h	\
	GB.h		\
	gbMemory.h	\
	gbPrinter.h	\
	gbSGB.h		\
	gbSound.h	\
			\
	gbCheats.cpp	\
	GB.cpp		\
	gbDis.cpp	\
	gbGfx.cpp	\
	gbGlobals.cpp	\
	gbMemory.cpp	\
	gbPrinter.cpp	\
	gbSGB.cpp	\
	gbSound.cpp	


